# cv-analyzer

./: .gitignore  README.md  pyproject.toml
scripts/: run_analysis.py  smoke_test.py  visual_check.py
src/cv_agent/: __init__.py  agent.py  analysis.py  filename.py  models.py  parser.py  report.py
tests/: test_parser.py
